# THU9-314-tailsitter2

./: .gitignore  CMakeLists.txt  Makefile
314-doc/: Ubuntu-sim-nuttx.sh  copy_note_rain.txt  notes-xj_zhang.txt  rc_scripts_analyze.docx  改动说明-张骁骏.txt
ROMFS/px4fmu_common/init.d/: rc.interface  rc.sensors  rcS
ROMFS/px4fmu_common/mixers/: quad_x_vtol.main.mix
ROMFS/px4fmu_common/mixers-sitl/: quad_x_vtol.main.mix
cmake/common/: px4_base.cmake  px4_metadata.cmake
cmake/configs/: nuttx_aerocore2_default.cmake  nuttx_aerofc-v1_default.cmake  nuttx_auav-x21_default.cmake  nuttx_crazyflie_default.cmake  nuttx_esc35-v1_bootloader.cmake  nuttx_esc35-v1_default.cmake  nuttx_mindpx-v2_default.cmake  nuttx_px4-stm32f4discovery_default.cmake  nuttx_px4cannode-v1_bootloader.cmake  nuttx_px4cannode-v1_default.cmake  nuttx_px4esc-v1_bootloader.cmake  nuttx_px4esc-v1_default.cmake  nuttx_px4flow-v2_bootloader.cmake  nuttx_px4fmu-v1_default.cmake  nuttx_px4fmu-v2_default.cmake  nuttx_px4fmu-v2_full.cmake  nuttx_px4fmu-v2_test.cmake  nuttx_px4fmu-v3_default.cmake  nuttx_px4fmu-v4_default.cmake  nuttx_px4fmu-v4pro_default.cmake  nuttx_px4fmu-v5_default.cmake  nuttx_px4io-v2_default.cmake  nuttx_px4nucleoF767ZI-v1_default.cmake  nuttx_s2740vc-v1_bootloader.cmake  nuttx_s2740vc-v1_default.cmake  nuttx_tap-v1_default.cmake  nuttx_zubaxgnss-v1_bootloader.cmake  posix_bebop_default.cmake  posix_rpi_common.cmake  posix_sdflight_default.cmake  posix_sitl_default.cmake  posix_sitl_replay.cmake  qurt_sdflight_default.cmake  qurt_sdflight_legacy.cmake
cmake/nuttx/: px4_impl_nuttx.cmake
cmake/posix/: px4_impl_posix.cmake
integrationtests/: run_tests.bash
msg/: CMakeLists.txt  differential_pressure.msg  vehicle_command.msg
nuttx-configs/aerocore/nsh/: defconfig
nuttx-configs/aerocore2/nsh/: defconfig
nuttx-configs/aerofc-v1/nsh/: defconfig
nuttx-configs/auav-x21/nsh/: defconfig
nuttx-configs/crazyflie/nsh/: defconfig
nuttx-configs/mindpx-v2/nsh/: defconfig
nuttx-configs/px4fmu-v2/nsh/: defconfig
nuttx-configs/px4fmu-v3/nsh/: defconfig
nuttx-configs/px4fmu-v4/nsh/: defconfig
nuttx-configs/px4fmu-v4pro/nsh/: defconfig
nuttx-configs/px4fmu-v4pro/scripts/: ld.script
nuttx-configs/px4fmu-v5/nsh/: defconfig
posix-configs/SITL/init/ekf2/: iris  plane  tailsitter
posix-configs/SITL/init/iekf/: iris_opt_flow
posix-configs/SITL/init/lpe/: standard_vtol
src/314-modules/fw_att_control/: FixedwingAttitudeControl.cpp
src/314-modules/fw_pos_control_l1/: FixedwingPositionControl.cpp  FixedwingPositionControl.hpp
src/314-modules/mc_pos_control/: mc_pos_control_main.cpp  mc_pos_control_params.c
src/314-modules/vtol_att_control/: CMakeLists.txt  tailsitter.cpp  tailsitter.h  tailsitter_test_1.cpp  tailsitter_test_1.h  vtol_att_control_main.cpp  vtol_att_control_main.h  vtol_att_control_params.c
src/drivers/: drv_sensor.h
src/drivers/boards/esc35-v1/bootloader/: CMakeLists.txt
src/drivers/boards/px4cannode-v1/bootloader/: CMakeLists.txt
src/drivers/boards/px4esc-v1/bootloader/: CMakeLists.txt
src/drivers/boards/px4flow-v2/bootloader/: CMakeLists.txt
src/drivers/boards/s2740vc-v1/bootloader/: CMakeLists.txt
src/drivers/boards/zubaxgnss-v1/bootloader/: CMakeLists.txt
src/drivers/camera_trigger/: camera_trigger.cpp  camera_trigger_params.c
src/drivers/ets_airspeed/: ets_airspeed.cpp
src/drivers/frsky_telemetry/: frsky_data.c
src/drivers/gps/: gps.cpp
src/drivers/mpu6000/: mpu6000.cpp
src/drivers/mpu9250/: mpu9250.cpp
src/drivers/rgbled/: rgbled.cpp
src/examples/segway/: BlockSegwayController.hpp  CMakeLists.txt  blocks.cpp  blocks.hpp
src/firmware/nuttx/: CMakeLists.txt
src/firmware/posix/: sitl_target.cmake
src/include/containers/: List.hpp
src/lib/: CMakeLists.txt
src/lib/314-lib/FlightTasks/: FlightTasks.cpp  FlightTasks.hpp
src/lib/314-lib/FlightTasks/tasks/: CMakeLists.txt  (+2 more)
src/lib/bezier/: BezierQuad.cpp  BezierQuad.hpp
src/lib/controllib/: blocks.hpp
src/lib/controllib/block/: Block.cpp  Block.hpp  BlockParam.cpp  BlockParam.hpp
src/lib/flight_tasks/tasks/: FlightTaskOrbit.cpp
src/lib/launchdetection/: LaunchDetector.h
src/lib/rc/: dsm.c
src/lib/ros/: ros.cpp
src/lib/version/: CMakeLists.txt  version.c
src/modules/commander/: commander.cpp  state_machine_helper.cpp
src/modules/dataman/: dataman.cpp
src/modules/ekf2/: ekf2_main.cpp
src/modules/fw_pos_control_l1/: FixedwingPositionControl.cpp  FixedwingPositionControl.hpp
src/modules/gnd_pos_control/: GroundRoverPositionControl.cpp
src/modules/iekf/: IEKF.cpp  IEKF.hpp  constants.hpp
src/modules/iekf/corrections/: accel.cpp  baro.cpp  flow.cpp  land.cpp  vision.cpp
src/modules/land_detector/: FixedwingLandDetector.cpp  FixedwingLandDetector.h  LandDetector.cpp  LandDetector.h  MulticopterLandDetector.cpp  MulticopterLandDetector.h  RoverLandDetector.cpp  land_detector_params.c
src/modules/logger/: logger.cpp
src/modules/mavlink/: mavlink_main.cpp  mavlink_messages.cpp  mavlink_mission.cpp  mavlink_receiver.cpp  mavlink_receiver.h
src/modules/mc_att_control/: mc_att_control_main.cpp
src/modules/mc_pos_control/: mc_pos_control_main.cpp  mc_pos_control_params.c
src/modules/navigator/: datalinkloss.cpp  enginefailure.cpp  follow_target.cpp  gpsfailure.cpp  land.cpp  loiter.cpp  mission.cpp  mission.h  mission_block.cpp  mission_block.h  mission_feasibility_checker.cpp  mission_params.c  navigation.h  navigator.h  navigator_main.cpp  rcloss.cpp  rtl.cpp  takeoff.cpp
src/modules/replay/: replay.hpp  replay_main.cpp
src/modules/sdlog2/: sdlog2.c  sdlog2_messages.h
src/modules/sensors/: parameters.cpp  sensor_params.c  sensors.cpp
src/modules/simulator/: simulator_mavlink.cpp
src/modules/systemlib/: system_params.c
src/modules/uORB/: Publication.cpp  Publication.hpp  Subscription.cpp  Subscription.hpp
src/modules/uORB/uORB_tests/: uORBTest_UnitTest.hpp
src/modules/uavcan/: CMakeLists.txt  uavcan_main.cpp
src/modules/uavcanesc/: CMakeLists.txt
src/modules/uavcannode/: CMakeLists.txt
src/modules/vtol_att_control/: tailsitter.cpp
(+2 files in other folders)
